--- a/src/index.css
+++ b/src/index.css
@@ -12,20 +12,19 @@ body {
   background-color: rgb(250, 249, 246);
 }
 
+p {
+  font-size: 1rem;
+}
+
 button {
   cursor: pointer;
   margin-top: 1rem;
   margin-right: 1rem;
   margin-bottom: 1rem;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 1.2rem;
+  border-radius: 6px;
 }
 
-/* h1 {
-  font-size: 3rem;
-} */
-
-.primaryActionButton {
-  /* display: block; */
-  width: fit-content;
-  align-self: flex-end;
+a {
+  text-decoration: none;
 }
