--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   line-height: 1.6;
   font-family: 'Fira Sans', sans-serif;
   color: #333;
-  /* border: 1px solid red; */
+  border: 1px solid red;
 }
 
 body {
